ProjetCompil/Verif/Test/fail/while.cas
program
	A : real;
begin
	while (A) do
		NULL;
	end;
	
end.